fix overflow in organizators add/remove dialogs

--- a/src/pages/main/EventData/index.module.css
+++ b/src/pages/main/EventData/index.module.css
@@ -239,6 +239,15 @@
   max-width: 960px;
 }
 
+.dialog_unoverflow {
+  margin-left: auto;
+  margin-right: auto;
+  max-height: calc(100% - 60px);
+  width: auto;
+  max-width: 960px;
+  overflow: visible;
+}
+
 .dialog_item {
   display: flex;
   flex-direction: column;
